--- a/Sudoku Game/style.css
+++ b/Sudoku Game/style.css
@@ -5,7 +5,8 @@ body {
 
     body{
         color: rgb(128, 20, 20);
-        background-color: rgb(255, 179, 0);
+        background-color: lightblue;
+}
     }
 
 hr {
