--- a/Sudoku Game/style.css
+++ b/Sudoku Game/style.css
@@ -5,8 +5,8 @@ body {
 
     body{
         color: rgb(128, 20, 20);
-        background-color: lightblue;
-}
+        background-color: colar;
+     
     }
 
 hr {
