--- a/Sudoku Game/style.css
+++ b/Sudoku Game/style.css
@@ -5,7 +5,7 @@ body {
 
     body{
         color: rgb(128, 20, 20);
-        background-color: colar;
+        background-color: coral;
      
     }
 
