--- a/Sudoku Game/style.css
+++ b/Sudoku Game/style.css
@@ -5,7 +5,7 @@ body {
 
     body{
         color: rgb(128, 20, 20);
-        background-color:   background-color: rgba(201, 76, 76, 0.3);
+        background-color:  rgba(201, 76, 76, 0.3);
 
      
     }
